fixed the header, finished dark mode, added animation to service button, adjusted language option to both light and dark mode, putted link to the dark mode icon

--- a/Homedark.css
+++ b/Homedark.css
@@ -2,7 +2,6 @@
     line-height: normal;
     margin: 0;
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-    z-index: 5;
   }
   
   body {
@@ -12,7 +11,7 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    border-top: 1rem solid #799dab;
+    border-top: 1rem solid #000000;
   
   }
   
@@ -44,16 +43,16 @@
   }
   a {
     text-decoration: none;
-    color: #799dab;
+    color: #000000;
   }
   header a:hover {
-    color: #000000;
+    color: rgb(255, 255, 255);
     text-shadow: rgba(0, 0, 0, 0.188) 1px 0 4px;
     transition: 0.5s ease;
   }
   .contact-button {
-    background-color: #799dab;
-    color: white;
+    background-color: #C7EAF8;
+    color: #000000;
     padding: 0.5rem 1.5rem;
     border-radius: 3rem;
     box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.25);
@@ -71,6 +70,40 @@
   .nav-bar:last-child {
     margin-right: 1rem;
   }
+
+  /* LANGUAGE MENU SELECTOR */
+.lang {
+  background-color: #c7eaf8;
+  padding: 1rem;
+  list-style: none;
+
+  border-bottom-left-radius: 2rem;
+  border-left: 0.1rem solid #799dab;
+  border-bottom: 0.1rem solid #799dab;
+
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  display: none;
+}
+
+.language-menu:hover .lang {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.lang img {
+  height: 2rem;
+  width: 2rem;
+}
+
+.lang li {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
   
   /* MAIN */
   main{
@@ -82,7 +115,7 @@
   }
   .text1{
     text-align: center;
-    color:#799dab;
+    color:#C7EAF8;
     text-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
     font-size: 5rem;
     grid-area: 1 / 2 / 2 / 3;
@@ -91,7 +124,7 @@
   .text2{
     margin-top: 2rem;
     text-align: center;
-    color:#799dab;
+    color:#C7EAF8;
     font-size: 3rem;
     grid-area: 2 / 2 / 3 / 3;
   }
@@ -100,18 +133,21 @@
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
     border-radius: 50px;
     border: none;
-    background-color: rgb(255, 255, 255);
+    background-color: #C7EAF8;
     align-items: center;
     grid-area: 3 / 2 / 4 / 3;
     margin-top: 2rem;
     margin-bottom: 5rem;
     margin-left: 30rem;
     margin-right: 30rem;
-  }
-  
-  .serv{
     font-size: 20px;
-    color: #799dab;
+    color: #000000;
+  }
+
+  .services:hover {
+    background-color: #000000;
+    transition: 0.5s ease;
+    color: rgb(255, 255, 255);
   }
   
   
@@ -124,11 +160,11 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    color: black;
+    color: white;
     font-weight: 300;
     font-size: 0.7rem;
     padding: 0.1rem;
-    background-color: white;
+    background-color: #000000;
     text-align: center;
   }
   
