--- a/Homepage.css
+++ b/Homepage.css
@@ -2,7 +2,6 @@
   line-height: normal;
   margin: 0;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  z-index: 5;
 }
 
 body {
@@ -133,18 +132,21 @@ main{
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
   border-radius: 50px;
   border: none;
-  background-color: rgb(255, 255, 255);
+  background-color: #F8F8F8;
   align-items: center;
   grid-area: 3 / 2 / 4 / 3;
   margin-top: 2rem;
   margin-bottom: 5rem;
   margin-left: 30rem;
   margin-right: 30rem;
-}
-
-.serv{
   font-size: 20px;
   color: #799dab;
+}
+
+.services:hover {
+  background-color: #000000;
+  transition: 0.5s ease;
+  color: rgb(255, 255, 255);
 }
 
 
